--- a/data/authors/Danuta Sampson.mdx
+++ b/data/authors/Danuta Sampson.mdx
@@ -8,8 +8,10 @@ linkedin: https://www.linkedin.com/in/danuta-danka-sampson-31754579/
 twitter: https://x.com/damasampson
 ---
 
-<a href="https://research-repository.uwa.edu.au/en/persons/danka-sampson">Danuta (Danka) Sampson</a> is an internationally trained translational researcher jointly appointed between the Lions Eye Institute and the University of Western Australia.
-She designs and constructs non-invasive optics-based imaging instruments and develops standardised workflows for ophthalmic image and data analysis.
-Her long-term career goal is to equip clinicians, biologists and scientists with standardised hardware and software tools to study retinal neuro-vascular units in health and disease, prevent and monitor retinal photoreceptors and vascular diseases, and make a real difference to patients.
-
-<span className="font-bold">Email</span>: Danuta.sampson@lei.org.au
+<a href="https://research-repository.uwa.edu.au/en/persons/danka-sampson">Danuta (Danka) Sampson</a> is an internationally trained translational researcher at the Lions Eye Institute and the University of Western Australia.
+She develops standardised workflows for ophthalmic image and data analysis.
+She loves working with people around the world with different backgrounds, skills and experiences to solve medical challenges jointly, applying the principle of Open Science.
+Beyond research, Sampson passions are science communication and developing a more inclusive society.
+She has designed and delivered >30 STEM outreach programmes, mentored >30 students and recently published two children’s STEM books.
+Sampson is involved in the global optics and photonics community through engagement with Optica and SPIE - the largest optics and photonics societies globally.
+She serves as light science ambassador (Optica), supports various committees (Optica) and designs STEM educational games/materials (SPIE).
