--- a/data/authors/David Sampson.mdx
+++ b/data/authors/David Sampson.mdx
@@ -2,8 +2,7 @@
 name: David Sampson
 avatar: /static/images/avatar.png
 role: collaborator
+email: d.sampson@surrey.ac.uk
 ---
 
 David Sampson
-
-<span className="font-bold">Email</span>: d.sampson@surrey.ac.uk 
