--- a/data/authors/Gavrielle Untracht.mdx
+++ b/data/authors/Gavrielle Untracht.mdx
@@ -3,14 +3,11 @@ name: Gavrielle Untracht
 avatar: /static/images/avatars/gavrielle-untracht.jpg
 occupation: Postdoctoral researcher
 company: Technical University of Denmark
-email: Danuta.sampson@lei.org.au 
+email: greun@dtu.dk
 ---
-
 
 <a href="https://orbit.dtu.dk/en/persons/gavrielle-untracht">Gavrielle Untracht</a> is a postdoctoral researcher in the Biophotonic Imaging Group at the Technical University of Denmark.
 She received a B.S. in Optical Engineering and an M.S. in Applied Physics from Cornell University.
 She then obtained a Ph.D. in Biomedical Optics from the University of Western Australia.
 Her research focuses on exploring light tissue interactions to improve optical imaging towards the development of translational imaging tools.
 She is driven by the opportunity to make a difference by revolutionizing medical diagnostics.
-
-<span className="font-bold">Email</span>: greun@dtu.dk
