--- a/data/authors/Madeleine Torcasso.mdx
+++ b/data/authors/Madeleine Torcasso.mdx
@@ -3,7 +3,7 @@ name: Madeleine Torcasso
 avatar: /static/images/avatars/madeleine-durkee.jpg
 occupation: Postdoctoral researcher
 company: University of Chicago
-email: Danuta.sampson@lei.org.au 
+email: durkeems@uchicago.edu
 ---
 
 <a href="https://datascience.uchicago.edu/people/madeleine-torcasso/">Madeleine Torcasso</a> is a postdoctoral researcher in the Department of Radiology at the University of Chicago.
@@ -11,5 +11,3 @@ She received her bachelor’s degree in Biomedical Engineering from Vanderbilt U
 She currently works with AI to quantify high-content optical microscopy images of human tissue samples.
 She is also interested in using AI to merge data from multiple imaging modalities to improve predictive models, and is passionate about helping create open-source tools to help support researchers in producing reproducible results.
 In her free time, she likes to get away from the computer and run, hike, or walk; anything to stay active!
-
-<span className="font-bold">Email</span>: durkeems@uchicago.edu
