--- a/data/publication/AIROGS Artificial intelligence for robust glaucoma screening challenge.mdx
+++ b/data/publication/AIROGS Artificial intelligence for robust glaucoma screening challenge.mdx
@@ -2,7 +2,7 @@
 authors: 'de Vente, C., et al'
 date: '2024-12-25'
 year: 2024
-topics: ['Datasets', 'Software tools', 'Glaucoma']
+topics: ['Datasets', 'Software tools']
 draft: false
 doi: 'https://doi.org/10.1109/TMI.2023.3313786'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/37713220/'
