--- a/data/publication/Characteristics of a Large, Labeled Data Set for the Training of Artificial Intelligence for Glaucoma Screening with Fundus Photographs.mdx
+++ b/data/publication/Characteristics of a Large, Labeled Data Set for the Training of Artificial Intelligence for Glaucoma Screening with Fundus Photographs.mdx
@@ -2,7 +2,7 @@
 authors: 'Lemij, H. G., et al.'
 date: "2023-12-30"
 year: 2023
-topics: ['Datasets', 'Glaucoma']
+topics: ['Datasets']
 draft: false
 doi: 'https://doi.org/10.1016/j.xops.2023.100300'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/37113471/'
