--- a/data/resource/Clinicaltrials.mdx
+++ b/data/resource/Clinicaltrials.mdx
@@ -3,7 +3,7 @@ title: 'ClinicalTrials.gov'
 date: '2024-12-30'
 topic: 'OPEN-SCIENCE GENERAL RESOURCES'
 category: 'OPEN-SCIENCE GENERAL RESOURCES'
-draft: false
+draft: true
 ---
 
 ClinicalTrials.gov is a website and online database of clinical research studies and information about their results.
