--- a/data/resource/Deep Learning based Intraretinal Fluid Segmentation on OCT.mdx
+++ b/data/resource/Deep Learning based Intraretinal Fluid Segmentation on OCT.mdx
@@ -1,11 +1,10 @@
 ---
-title: 'uw-biomedical-ml/irf-segmenter'
+title: 'Deep Learning based Intraretinal Fluid Segmentation on OCT'
 date: '2024-12-30'
-topic: 'OPTICAL COHERENCE TOMOGRAPHY ANGIOGRAPHY'
-category: 'OPEN-SOURCE SOFTWARE TOOLS'
+topic: 'AI MODELS'
+category: 'AI MODELS'
 draft: false
 ---
 
-A fully-automated, deep learning based, intraretinal fluid segmenter for optical coherence (OCT) images of the macula
-The source code can be found <a className="text-primary-400 underline" target="_blank" href="https://github.com/uw-biomedical-ml/irf-segmenter">[here]</a>.
+<a className="text-400 underline" target="_blank" href="https://github.com/uw-biomedical-ml/irf-segmenter">WEBSITE</a>
 
