--- a/data/resource/Deep Learning based OIR Quantification & Segmentation.mdx
+++ b/data/resource/Deep Learning based OIR Quantification & Segmentation.mdx
@@ -1,11 +1,10 @@
 ---
-title: 'uw-biomedical-ml/oir'
+title: 'Deep Learning based OIR Quantification & Segmentation'
 date: '2024-12-30'
-topic: 'OPTICAL COHERENCE TOMOGRAPHY ANGIOGRAPHY'
-category: 'OPEN-SOURCE SOFTWARE TOOLS'
+topic: 'AI MODELS'
+category: 'AI MODELS'
 draft: false
 ---
 
-A code repository to train a CNN to do the segmentation of the vaso-obliteration zone and the neovascular tufts/clusters in the images obtained from the mouse model of oxygen-induced retinopathy (OIR).
-The source code can be found <a className="text-primary-400 underline" target="_blank" href="https://github.com/uw-biomedical-ml/oir">[here]</a>.
+<a className="text-400 underline" target="_blank" href="https://github.com/uw-biomedical-ml/oir">WEBSITE</a>
 
