--- a/data/resource/Grand Challenge.mdx
+++ b/data/resource/Grand Challenge.mdx
@@ -3,7 +3,7 @@ title: 'Grand Challenge'
 date: '2024-12-30'
 topic: 'OPEN-SCIENCE GENERAL RESOURCES'
 category: 'OPEN-SCIENCE GENERAL RESOURCES'
-draft: false
+draft: true
 ---
 Grand Challenge is a platform for end-to-end development of machine learning solutions in biomedical imaging.
 Hundreds of challenges are available with their provided datasets.
