--- a/data/resource/Nature portfolio.mdx
+++ b/data/resource/Nature portfolio.mdx
@@ -3,7 +3,7 @@ title: 'Nature portfolio'
 date: '2024-12-30'
 topic: 'OPEN-SCIENCE GENERAL RESOURCES'
 category: 'OPEN-SCIENCE GENERAL RESOURCES'
-draft: false
+draft: true
 ---
 
 Nature Portfolio publishes its most significant discoveries—findings that advance knowledge and address some of the greatest challenges that we face as a society today.
