--- a/data/resource/UK Biobank.mdx
+++ b/data/resource/UK Biobank.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'UK Biobank'
 date: '2024-12-30'
-topic: 'OPEN-SCIENCE GENERAL RESOURCES'
-category: 'OPEN-SCIENCE GENERAL RESOURCES'
+topic: 'PROTOCOLS AND INITIATIVES'
+category: 'PROTOCOLS AND INITIATIVES'
 draft: false
 ---
 
