--- a/data/publication/From Data to Deployment The Collaborative Community on Ophthalmic Imaging Roadmap for Artificial Intelligence in Age-Related Macular Degeneration.mdx
+++ b/data/publication/From Data to Deployment The Collaborative Community on Ophthalmic Imaging Roadmap for Artificial Intelligence in Age-Related Macular Degeneration.mdx
@@ -2,7 +2,7 @@
 authors: 'Dow, E. R., et al.'
 date: "2022-12-30"
 year: 2022
-topics: ['Review and roadmaps', 'Age-related macular degeneration (AMD)']
+topics: ['Review and roadmaps']
 draft: false
 doi: 'https://doi.org/10.1016/j.ophtha.2022.01.002'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/35016892/'
