--- a/data/publication/Standardization and clinical applications of retinal imaging biomarkers for cardiovascular disease a Roadmap from an NHLBI workshop.mdx
+++ b/data/publication/Standardization and clinical applications of retinal imaging biomarkers for cardiovascular disease a Roadmap from an NHLBI workshop.mdx
@@ -2,7 +2,7 @@
 authors: 'Chew, E. Y., et al.'
 date: "2024-12-27"
 year: 2024
-topics: ['Review and roadmaps', 'Vascular disease']
+topics: ['Review and roadmaps']
 draft: false
 doi: 'https://doi.org/10.1038/s41569-024-01060-8'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/39039178/'
