--- a/data/resource/Tool for reading Heidelberg Spectralis imaging format.mdx
+++ b/data/resource/Tool for reading Heidelberg Spectralis imaging format.mdx
@@ -1,12 +1,9 @@
 ---
-title: 'heyexReader'
+title: 'Tool for reading Heidelberg Spectralis imaging format'
 date: '2024-12-30'
-topic: 'OPTICAL COHERENCE TOMOGRAPHY ANGIOGRAPHY'
-category: 'OPEN-SOURCE SOFTWARE TOOLS'
+topic: 'AI MODELS'
+category: 'AI MODELS'
 draft: false
 ---
 
-A tool implemented innative python for reading Heidelberg Heyex Spectralis files.
-The current version only supports the Heyex VOL files.
-The full documentation of this project is located <a className="text-primary-400 underline" target="_blank" href="http://heyexreader.readthedocs.io/">[here]</a>.
-The source code can be found <a className="text-primary-400 underline" target="_blank" href="https://github.com/ayl/heyexReader">[here]</a>.
+<a className="text-400 underline" target="_blank" href="https://github.com/ayl/heyexReader">WEBSITE</a>
