update david as collaborator and remove dr as topic

--- a/data/publication/Artificial Intelligence Screening for Diabetic Retinopathy the Real-World Emerging Application.mdx
+++ b/data/publication/Artificial Intelligence Screening for Diabetic Retinopathy the Real-World Emerging Application.mdx
@@ -2,7 +2,7 @@
 authors: 'Bellemo, V., et al.'
 date: "2019-12-28"
 year: 2019
-topics: ['Datasets', 'Software tools', 'Diabetic retinopathy (DR)']
+topics: ['Datasets', 'Software tools']
 draft: false
 doi: 'https://doi.org/10.1007/s11892-019-1189-3'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/31367962/'
