--- a/data/publication/Artificial intelligence-enabled screening for diabetic retinopathy a real-world multicenter and prospective study.mdx
+++ b/data/publication/Artificial intelligence-enabled screening for diabetic retinopathy a real-world multicenter and prospective study.mdx
@@ -2,7 +2,7 @@
 authors: 'Zhang, Y., et al.'
 date: "2020-12-28"
 year: 2020
-topics: ['Datasets', 'Software tools', 'Diabetic retinopathy (DR)']
+topics: ['Datasets', 'Software tools']
 draft: false
 doi: 'https://doi.org/10.1136/bmjdrc-2020-001596'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/33087340/'
