--- a/data/publication/Data harmonization standardization and collaboration for diabetic retinal disease (DRD) research report from the 2024 Mary Tyler Moore vision initiative workshop on data.mdx
+++ b/data/publication/Data harmonization standardization and collaboration for diabetic retinal disease (DRD) research report from the 2024 Mary Tyler Moore vision initiative workshop on data.mdx
@@ -2,7 +2,7 @@
 authors: 'Domalpally, A., et al.'
 date: "2024-12-30"
 year: 2024
-topics: ['Protocols', 'Review and roadmaps', 'Diabetic retinopathy (DR)']
+topics: ['Protocols', 'Review and roadmaps']
 draft: false
 doi: 'https://doi.org/10.1167/tvst.13.10.4'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/39361314/'
