--- a/data/publication/Performance of the AIDRScreening system in detecting diabetic retinopathy in the fundus photographs of Chinese patients a prospective multicenter clinical study.mdx
+++ b/data/publication/Performance of the AIDRScreening system in detecting diabetic retinopathy in the fundus photographs of Chinese patients a prospective multicenter clinical study.mdx
@@ -2,7 +2,7 @@
 authors: 'Yang, Y., et al.'
 date: "2022-12-25"
 year: 2022
-topics: ['Datasets', 'Software tools', 'Diabetic retinopathy (DR)']
+topics: ['Datasets', 'Software tools']
 draft: false
 doi: 'https://doi.org/10.21037/atm-22-350'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/36388839/'
