--- a/data/publication/Pivotal Evaluation of an Artificial Intelligence System for Autonomous Detection of Referrable and Vision-Threatening Diabetic Retinopathy.mdx
+++ b/data/publication/Pivotal Evaluation of an Artificial Intelligence System for Autonomous Detection of Referrable and Vision-Threatening Diabetic Retinopathy.mdx
@@ -2,7 +2,7 @@
 authors: 'Ipp, E., et al.'
 date: "2021-12-26"
 year: 2021
-topics: ['Datasets', 'Software tools', 'Diabetic retinopathy (DR)']
+topics: ['Datasets', 'Software tools']
 draft: false
 doi: 'https://doi.org/10.1001/jamanetworkopen.2021.34254'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/34779843/'
