--- a/data/authors/David Alonso-Caneiro.mdx
+++ b/data/authors/David Alonso-Caneiro.mdx
@@ -4,6 +4,7 @@ avatar: /static/images/avatars/david-alonso-caneiro.jpeg
 occupation: Senior Lecturer
 company: University of the Sunshine Coast
 email: dalonsocaneiro@usc.edu.au
+role: collaborator
 ---
 
 Dr. David Alonso-Caneiro, a Senior Lecturer in Engineering at the University of the Sunshine Coast, is committed to driving research that brings tangible benefits to society.
