--- a/data/publication/Artificial intelligence and diabetic retinopathy ai framework prospective studies head-to-head validation and cost-effectiveness.mdx
+++ b/data/publication/Artificial intelligence and diabetic retinopathy ai framework prospective studies head-to-head validation and cost-effectiveness.mdx
@@ -2,7 +2,7 @@
 authors: 'Rajesh, A. E., et al.'
 date: "2023-12-27"
 year: 2023
-topics: ['Review and roadmaps', 'Diabetic retinopathy (DR)']
+topics: ['Review and roadmaps']
 draft: false
 doi: 'https://doi.org/10.2337/dci23-0032'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/37729502/'
