--- a/data/publication/Prospective evaluation of an artificial intelligence-enabled algorithm for automated diabetic retinopathy screening of 30000 patients.mdx
+++ b/data/publication/Prospective evaluation of an artificial intelligence-enabled algorithm for automated diabetic retinopathy screening of 30000 patients.mdx
@@ -2,7 +2,7 @@
 authors: 'Heydon, P., et al.'
 date: "2021-12-27"
 year: 2021
-topics: ['Datasets', 'Software tools', 'Diabetic retinopathy (DR)']
+topics: ['Datasets', 'Software tools']
 draft: false
 doi: 'https://doi.org/10.1136/bjophthalmol-2020-316594'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/32606081/'
