--- a/data/publication/Real-world artificial intelligence-based opportunistic screening for diabetic retinopathy in endocrinology and indigenous healthcare settings in Australia.mdx
+++ b/data/publication/Real-world artificial intelligence-based opportunistic screening for diabetic retinopathy in endocrinology and indigenous healthcare settings in Australia.mdx
@@ -2,7 +2,7 @@
 authors: 'Scheetz, J., et al.'
 date: "2021-12-25"
 year: 2021
-topics: ['Datasets', 'Diabetic retinopathy (DR)']
+topics: ['Datasets']
 draft: false
 doi: 'https://doi.org/10.1038/s41598-021-94178-5'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/34349130/'
